# AgentSlam

./: .gitignore  AGENTS.md
.codex/: config.toml
docs/: ARCHITECTURE_OVERVIEW.md  CODEX_AUTH_PRIVATE_RUNNER.md  CODEX_CLOUD_GITHUB_SETUP.md  DATAFLOW.md  DEV_PLAYBOOK.md  EVAL.md  HANDOFF_PLAYBOOK.md  INTERFACES.md  MCP_AND_SKILLS_SETUP.md  OPERATOR_RUNBOOK_24X7.md  OPS_24X7_ARCHITECTURE.md  PHASE1_SEMANTIC_MAPPING.md  PLANS.md  PROJECT_CONTEXT.md  REFERENCE_PROJECTS.md  SELF_HOSTED_RUNNER_SETUP.md  TEST_PLAYBOOK.md  TOOLS_AND_AGENT_PRACTICES.md
reports/: BOOTSTRAP_VALIDATION.md  CLONE_AND_INDEX_CHECKLIST.md  DEV_READY_CHECKLIST.md  ENV_AUDIT.md  EXPLORATION_SEMANTIC_GROWTH_VALIDATION.md  GITNEXUS_STATUS.md  GIT_STATUS.md  ISAAC_DISCOVERY.md  MULTI_AGENT_PROBE_PM.md  MULTI_AGENT_PROBE_RESEARCHER.md  MULTI_AGENT_PROBE_SUMMARY.md  MULTI_AGENT_PROBE_TESTER.md  PHASE0_ACCEPTANCE.md  PHASE0_BRINGUP_STATUS.md  PHASE0_GAPS.md  PHASE1_CLOSURE.md  PHASE1_DEMO_CHECKLIST.md  PHASE1_FRONT_STEREO_GEOMETRY_AUDIT.md  PHASE1_FRONT_STEREO_STABILITY_HARDENING.md  PHASE1_IMPLEMENTATION.md  PHASE1_ISAAC_SIM_CHECKPOINT_20260317.md  PHASE1_LOCALIZED_MAPPING_VALIDATION.md  PHASE1_NATIVE_ISAAC_ROS2_PRODUCER.md  PHASE1_OPERATOR_RUNBOOK.md  PHASE1_PATH_TOPDOWN_AUDIT.md  PHASE1_REVIEW.md  PHASE1_RUNTIME_FACTS.md  (+21 more)
ros_ws/src/localization_adapter_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/localization_adapter_pkg/localization_adapter_pkg/: __init__.py  core.py  ros_node.py
ros_ws/src/localization_adapter_pkg/test/: test_localization_core.py
ros_ws/src/nav2_overlay_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/nav2_overlay_pkg/nav2_overlay_pkg/: __init__.py  exploration_demo.py  geometry.py  localized_mapping.py
ros_ws/src/nav2_overlay_pkg/test/: test_exploration_demo.py  test_geometry.py
(+198 files in other folders)
